--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(data_struct)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(data_struct main.cpp LinearList/LinearList.h LinearList/SeqList.h LinearList/LinkList.h)
+add_executable(data_struct main.cpp LinearList/LinearList.h LinearList/SeqList.h LinearList/LinkList.h LinearList/CircList.h LinearList/DblList.h)
