实现了字符串以及KMP匹配算法

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(data_struct)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(data_struct Stack/SimpleCalculator.cpp LinearList/LinearList.h LinearList/SeqList.h LinearList/LinkList.h LinearList/CircList.h LinearList/DblList.h Stack/Stack.h Stack/DualStack.h Stack/LinkedStack.h Stack/SimpleCalculator.cpp Queue/SeqQueue.h Queue/LinkedQueue.h Queue/Pascal.cpp Queue/PQueue.h Table/SparseMatrix.h)
+add_executable(data_struct Stack/SimpleCalculator.cpp LinearList/LinearList.h LinearList/SeqList.h LinearList/LinkList.h LinearList/CircList.h LinearList/DblList.h Stack/Stack.h Stack/DualStack.h Stack/LinkedStack.h Stack/SimpleCalculator.cpp Queue/SeqQueue.h Queue/LinkedQueue.h Queue/Pascal.cpp Queue/PQueue.h Table/SparseMatrix.h Table/AString.h)
